--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 
     <groupId>be.ehb.switch2it</groupId>
     <artifactId>software-security</artifactId>
-    <version>1.2-SNAPSHOT</version>
+    <version>1.1.1</version>
     <packaging>war</packaging>
     <name>Software Security API</name>
     <description>A Java EE REST API providing functionalities required by the Erasmushogeschool Software Security
