--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,7 @@
         <version.typesafe>1.3.2</version.typesafe>
         <version.bouncycastle>1.58</version.bouncycastle>
         <version.commons-io>2.6</version.commons-io>
+        <version.jodatime>2.9.9</version.jodatime>
     </properties>
 
 
@@ -200,6 +201,11 @@
             <groupId>org.bouncycastle</groupId>
             <artifactId>bcpkix-jdk15on</artifactId>
             <version>${version.bouncycastle}</version>
+        </dependency>
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>${version.jodatime}</version>
         </dependency>
 
     </dependencies>
